	* Typos in killall.1 fixed Closes Debian: #198189
	* fuser -ki now tells user default is N Closes Debian: #197356
	* pstree -a doesn't print space at end of line Closes Debian: #182099
	* Works with new sort flags +2 -> -k 3 Thankyou Andrew Walrond
	* pstree.x11 now just pstree with a trick Closes Debian: #201042
	* Icons for pstree, thankyou Tatlin! Closes Debian: #192636

Changes in 21.3
===============
2003-04-03 Craig Small <csmall@small.dropbear.id.au>
    * SELinux SID selection uses -d instead of -S to stop the confusion of
	  signal names, no flags with upper case letters ok?
	  Closes Debian: #193790, #163360
	* Doesnt segfault on long cmdnames, thanks Ben Low Closes Debian: #187241
	* Updated libtool and friends so it works on new coreutils

2003-04-03 Craig Small <csmall@small.dropbear.id.au>
	* More fixes for types, also some GCC 3.2 fixes, thanks to
	  Stefan at SuSE

2002-09-27 Craig Small <csmall@small.dropbear.id.au>
	* Changed a long to a long long in pstree.

Changes in 21.2
===============
2002-09-27 Craig Small <csmall@small.dropbear.id.au>
	* Big bug in pstree, pstree -a would often fail badly. swapped variable
	  not set.
	* Removed pidof.1 and a variable not used.
	* Thanks to Peter Breitenlohner for all this info and Adam Conrad for
	  the test ppc machine.

Changes in 21.1
===============
2002-09-05 Craig Small <csmall@small.dropbear.id.au>
	* Added SELINUX patches from Russell Coker

2002-08-19 Craig Small <csmall@small.dropbear.id.au>
	* Changed killall.1 to be less ambigous, Debian #127851
	
2002-08-18
	* Added patches from James Morrison so it works on Hurd
	* Fixed UTF8 Problem. closes Debian #140960
	* Return for fuser -k will mean no.

2002-08-17
	* Now has LFS support. Closes Debian #129157 and #156017
	* Fixed pstree -a extra bracket problem, Closes Debian #96791

2002-08-16  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	* Makefile.am (SUBDIRS): Remove intl.
	(SUBDIRS): Remove intl.