@@ -1,2 +1,2 @@
-Werner Almesberger <Werner.Almesberger@epfl.ch>
+Werner Almesberger <werner@almesberger.net>
 Craig Small <csmall@small.dropbear.id.au>
