@@ -1,4 +1,4 @@
-.TH KILLALL 1 "March 25, 2001" "Linux" "User Commands"
+.TH KILLALL 1 "September 26, 2003" "Linux" "User Commands"
 .SH NAME
 killall \- kill processes by name
 .SH SYNOPSIS
@@ -88,7 +88,7 @@ user.
 \fBkillall \-w\fP doesn't detect if a process disappears and is replaced by
 a new process with the same PID between scans.
 .SH AUTHORS
-Werner Almesberger <Werner.Almesberger@epfl.ch> wrote the original version
+Werner Almesberger <werner@almesberger.net> wrote the original version
 of psmisc.  Since version 20 Craig Small <csmall@small.dropbear.id.au> 
 can be blamed.
 .SH "SEE ALSO"
