@@ -1,4 +1,4 @@
-.TH PSTREE 1 "May 6, 1998" "Linux" "User Commands"
+.TH PSTREE 1 "September 26, 2003" "Linux" "User Commands"
 .SH NAME
 pstree \- display a tree of processes
 .SH SYNOPSIS
@@ -88,7 +88,7 @@ Display version information.
 /proc	location of the proc file system
 .fi
 .SH AUTHORS
-Werner Almesberger <Werner.Almesberger@epfl.ch>
+Werner Almesberger <werner@almesberger.net>
 Craig Small <csmall@small.dropbear.id.au>
 .SH "SEE ALSO"
 ps(1), top(1)
