@@ -7,11 +7,15 @@ not yet released Craig Small <csmall@small.dropbear.id.au>
 	* Works with new sort flags +2 -> -k 3 Thankyou Andrew Walrond
 	* pstree.x11 now just pstree with a trick Closes Debian: #201042
 	* Icons for pstree, thankyou Tatlin! Closes Debian: #192636
+	* Removed message if no processes found, 
+	* Excess blanks in fuser removed.
+	* Two lines above close Debian: #212795
+
 
 Changes in 21.3
 ===============
 2003-04-03 Craig Small <csmall@small.dropbear.id.au>
-    * SELinux SID selection uses -d instead of -S to stop the confusion of
+	* SELinux SID selection uses -d instead of -S to stop the confusion of
 	  signal names, no flags with upper case letters ok?
 	  Closes Debian: #193790, #163360
 	* Doesnt segfault on long cmdnames, thanks Ben Low Closes Debian: #187241
